--- a/UI/package.json
+++ b/UI/package.json
@@ -42,6 +42,7 @@
     "chart.js": "^2.5.0",
     "moment-timezone": "^0.5.11",
     "react": "^15.4.2",
+    "react-datepicker": "^0.41.1",
     "react-dom": "^15.4.2",
     "react-router": "^3.0.2"
   }
