--- a/UI/package.json
+++ b/UI/package.json
@@ -13,7 +13,7 @@
     "copy-unix": "mkdir dist && cp src/index.html dist && cp -r src/img dist/img",
     "prebuild-unix": "npm run clean-unix && npm run copy-unix",
     "build-unix": "webpack --display-error-details",
-    "config-unix": "chmod 744 ./node_modules/.bin/webpack && npm rebuild node-sass"
+    "config-unix": "chmod 744 ./node_modules/.bin/webpack && npm rebuild node-sass && chmod 755 -r ../scripts"
   },
   "repository": {
     "type": "git",
