update package file

--- a/UI/package.json
+++ b/UI/package.json
@@ -12,8 +12,7 @@
     "clean-unix": "rm -rf dist",
     "copy-unix": "mkdir dist && cp src/index.html dist && cp -r src/img dist/img",
     "prebuild-unix": "npm run clean-unix && npm run copy-unix",
-    "build-unix": "webpack --display-error-details",
-    "config-unix": "chmod 744 ./node_modules/.bin/webpack && npm rebuild node-sass && chmod 755 -R ../scripts"
+    "build-unix": "webpack --display-error-details"
   },
   "repository": {
     "type": "git",
