--- a/docs/description
+++ b/docs/description
@@ -105,10 +105,7 @@ Example:
       - reservation function (reservation directory)
       ===========================
         - step1.js (update html)
-          - add new input element below this element.
-          <div className={Style.block}>
-            <input ref={data.name.toLowerCase().replace(' ','')+'MEM'} ... onChange={this.props.reservationContainer.onEnterMEM}/>
-          </div>
+          - add new input element inner "<div className={Style.row} key={key}>" element.
           ---------------------------------------------------------
           <div className={Style.block}>
             <span>ADD--ATTRIBUTE--NAME :</span>
@@ -117,7 +114,71 @@ Example:
             <input ref={data.name.toLowerCase().replace(' ','')+'ADD--ATTRIBUTE--NAME'} name={key} value={this.props.reservationContainer.state.ADD--ATTRIBUTE--NAME[key]} className={Style.inputradio} type='text' onChange={this.props.reservationContainer.onEnterADD--ATTRIBUTE--NAME}/>
           </div>
           ---------------------------------------------------------
-      
+          - add new attribute DOM to state inner componentDidMount()
+          ---------------------------------------------------------
+          ...
+          siteInputADD--ATTRIBUTE--NAMEDom = []
+          Object.keys(this.refs).map((data,key)=>{
+            if(key!=0){
+                if((key%2)==1){
+                    siteInputCPUDom.push(this.refs[data])
+                }else if((key%2)==0){
+                    siteInputMEMDom.push(this.refs[data])
+                }else{
+                  siteInputADD--ATTRIBUTE--NAMEDom.push(this.refs[data])
+                }
+            }
+          })
+          this.props.reservationContainer.setState({
+            siteInputCPUDom: siteInputCPUDom,
+            siteInputMEMDom: siteInputMEMDom,
+            siteInputADD--ATTRIBUTE--NAMEDom: siteInput
+          })
+          ---------------------------------------------------------
+        - reservationContainer.js
+          - first, add new attribute name to state of variable in constructor method.
+            ---------------------------------------------------------
+            this.state = {
+              ...
+              ADD--ATTRIBUTE--NAME: [],
+              siteInputADD--ATTRIBUTE--NAMEDom
+            }
+            ---------------------------------------------------------
+          - second, update setCpuAndMem method to below
+            ---------------------------------------------------------
+            setCPUAndMEM(index){
+              let {cpu,mem} = this.state
+              cpu[index] = ''
+              mem[index] = ''
+              ADD--ATTRIBUTE--NAME[ADD--ATTRIBUTE--NAME] = ''
+              this.setState({
+                  cpu: cpu,
+                  mem: mem,
+                  ADD--ATTRIBUTE--NAME: ADD--ATTRIBUTE--NAME
+              })
+            }
+            ---------------------------------------------------------
+          - third, add new method, that is onEnterADD--ATTRIBUTE--NAME()
+            onEnterADD--ATTRIBUTE--NAME(event){
+                let name = event.target.name
+                let value = event.target.value
+                let REGEX = /^\d+$/
+                if (value.match(REGEX)) {
+                    let {ADD--ATTRIBUTE--NAME} = this.state
+                    ADD--ATTRIBUTE--NAME[parseInt(name)] = value
+                    this.setState({
+                        ADD--ATTRIBUTE--NAME: ADD--ATTRIBUTE--NAME
+                    })
+                } else {
+                    if (value.length <= 1) {
+                        let {ADD--ATTRIBUTE--NAME} = this.state
+                        ADD--ATTRIBUTE--NAME[parseInt(name)] = ''
+                        this.setState({
+                            ADD--ATTRIBUTE--NAME: ADD--ATTRIBUTE--NAME
+                        })
+                    }
+                }
+            }
       ===========================
       - card (reservationBar directory)
       ===========================
@@ -187,4 +248,3 @@ Example:
                })
             }
           ---------------------------------------------------------
-          
