--- a/UI/package.json
+++ b/UI/package.json
@@ -12,7 +12,7 @@
     "clean-unix": "rm -rf dist",
     "copy-unix": "mkdir dist && cp src/index.html dist && cp -r src/img dist/img",
     "set-permission-unix": "chmod 755 -R ../scripts",
-    "create-config-file": "/opt/python/bin/python ../scripts/config/createConfigFile.py",
+    "create-config-file": "/usr/bin/env python ../scripts/config/createConfigFile.py",
     "prebuild-unix": "npm run clean-unix && npm run copy-unix && npm run set-permission-unix && npm run create-config-file",
     "build-unix": "webpack --display-error-details"
   },
